--- a/index.html
+++ b/index.html
@@ -5,17 +5,8 @@
 		<title>Panda Express</title>
 	</head>
 	<body>
-		<!-- basic layout -->
-		<header>
-			<h1>Puffy Teddy Hunter</h1>
-		</header>
-		<main>
-			<button>Click</button>
-			<p>Emotionally express yourself by choosing from a varity of teddy bears</p>
-			<p>Slogan Hug thing</p>
-			<video src="screen.mp4" controls='true'/>
-		</main>
-		<footer></footer>
+		<div id='page'></div>
+		<div id='coverpage'></div>
 		<script src='./js_files/ui.js'></script>
 	</body>
 </html>
