had the hyper-references set in home page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel='stylesheet' type='text/css' href='./css_files/main.css'>
-		<title>Panda Express</title>
+		<meta http-equiv="Refresh" content="0; url='./page/home.html'" />
 	</head>
-	<body>
-		<div id='page'></div>
-		<div id='coverpage'></div>
-		<script src='./js_files/ui.js'></script>
-	</body>
 </html>
